test/error/ast/CallExpectAddressableParam.mod
MODULE CallExpectAddressableParam;
IMPORT SYSTEM;
VAR a: SYSTEM.ADDRESS;
BEGIN
  a := SYSTEM.ADR(0);
END CallExpectAddressableParam.
